--- a/WSM.Testing.Tool/WSM.Testing.Tool.csproj
+++ b/WSM.Testing.Tool/WSM.Testing.Tool.csproj
@@ -2,18 +2,26 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<Version>0.0.1</Version>
-		<ApplicationIcon>console.ico</ApplicationIcon>
+		<Version>0.0.4</Version>
 		<PackageId>WSM.Testing.Tool</PackageId>
 		<Title>WSM Testing Tool To Make Console App With Test Easliy</Title>
 		<Authors>wisam</Authors>
 		<Company>WSM</Company>
 		<Description>This Package For Testing With Console Also Find Out Other Testing Tools On Here https://www.nuget.org/profiles/wsm</Description>
 		<PackageIcon>console-64.png</PackageIcon>
+		<Copyright>All Copyrights Saved For WSM 2023</Copyright>
+		<PackageProjectUrl>https://github.com/wisamidris7/WSM.Testing.Tool</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/wisamidris7/WSM.Testing.Tool</RepositoryUrl>
+		<RepositoryType>https://github.com/wisamidris7/WSM.Testing.Tool.git</RepositoryType>
+		<PackageTags>testing;wsm;console;easy;hard;test;tool;for;old;new;wisam;developer;</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Content Include="console.ico" />
+	  <None Include="..\README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
