--- a/WSM.Testing.Tool/WSM.Testing.Tool.csproj
+++ b/WSM.Testing.Tool/WSM.Testing.Tool.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<Version>0.0.4</Version>
+		<Version>0.0.6</Version>
 		<PackageId>WSM.Testing.Tool</PackageId>
 		<Title>WSM Testing Tool To Make Console App With Test Easliy</Title>
 		<Authors>wisam</Authors>
@@ -14,7 +14,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/wisamidris7/WSM.Testing.Tool</RepositoryUrl>
 		<RepositoryType>https://github.com/wisamidris7/WSM.Testing.Tool.git</RepositoryType>
-		<PackageTags>testing;wsm;console;easy;hard;test;tool;for;old;new;wisam;developer;</PackageTags>
+		<PackageTags>testing;wsm;console;easy;hard;test;tool;for;old;new;wisam;developer;unit testing c#;unit testing tutorial;unit testing;how to write unit tests in c#;c# unit testing;programming with mosh;black box testing;.net unit testing;testing;autromationtesting;automation testing;resharper;create a unit test c#;mstest;visual studio;c# unit test example;best practices;learn c#;visual studio editions;code with mosh;mocking;executeautomation;development;.net;nunit;selenium;best;csharp testing with wisam;console testing;best console testing tool ever;you should try it;</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -22,6 +22,10 @@
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
 	</ItemGroup>
 
 	<ItemGroup>
